# dispatch-agent-context-scoping-answers

./: README.md  SOLUTION.md  pyproject.toml  run.sh
agent/: context_builder.py  llm_client.py  main.py  prompt_templates.py  retrieval.py
tests/: test_context_assembly.py  test_grounding_traceability.py
