[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatch-agent-context-scoping"
version = "0.1.0"
description = "Context assembly seam for a logistics dispatch copilot"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.30",
  "python-dotenv>=1.0",
  "tiktoken>=0.7",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
